--- a/_posts/OSCP PATH/28-08-2021-Bounty.md
+++ b/_posts/OSCP PATH/28-08-2021-Bounty.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "OSCP Path ~ Bounty de Hack The Box (Necesario VIP)"
 description: Writeup de la maquina de HackTheBox llamada BOUNTY siguiendo el PATH para el OSCP
-tags: HTB, OSCP Path, Samba, Maquinas Retiradas, Writeup, Hacking
+tags: HTB, OSCP Path, IIS, JuicyPotato, Maquinas Retiradas, Writeup, Hacking
 ---
 
 # Bounty ~ Hack The Box to OSCP
