Data for Union - Intrusion

--- a/_posts/2022-01-09-Union2-SQLI.md
+++ b/_posts/2022-01-09-Union2-SQLI.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Maquina Retirada Union de Hack The Box (Necesario VIP)"
 description: En esta ocasion empezaremos con el Writeup de la maquina de HackTheBox llamada UNION
-tags: HTB, SQLI, Local File Inclusion, PHP, x-Forwarder-For, Maquinas Retiradas,
+tags: HTB, SQLI, Local File Inclusion, PHP, X-Forwarder-For, Command Injection, Maquinas Retiradas,
 ---
 
 # Union - SQL Injection ~ Hack The Box
@@ -180,7 +180,10 @@ Sorry, <?php
 
 Ya tenemos credenciales para conectarnos por SSH como `uhc` a la maquina.
 
-Procedemos a conectarnos por SSH
+Procedemos a conectarnos por SSH como el usuario `uhc`:
+```bash
+
+```
 
 
 
