--- a/_posts/2022-01-10-Previse.md
+++ b/_posts/2022-01-10-Previse.md
@@ -5,7 +5,7 @@ description: En esta ocasion empezaremos con el Writeup de la maquina de HackThe
 tags: HTB, LFI, Command Injection, Maquinas Retiradas,
 ---
 
-# Unio n - SQL Injection ~ Hack The Box
+# Previse - Command Injection ~ Hack The Box
 
 Realizamos el Primer escaneo con Nmap
 ```bash
